--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -14,7 +14,7 @@
 	// "forwardPorts": [],
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "pip3 install -r requirements.txt && pip3 install -r requirements-dev.txt",
+	"postCreateCommand": "pip install -r requirements.txt && pip install -r requirements-dev.txt",
 
 	// Configure tool-specific properties.
 	// "customizations": {},
