--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,3 +40,25 @@ path = "openenergyid/__init__.py"
 
 [tool.ruff]
 line-length = 100
+
+[tool.poetry]
+name = "openenergyid"
+version = "0.1.2" # You'll need to set this manually or use a different method for dynamic versioning
+description = "Open Source Python library for energy analytics and simulations"
+authors = [
+    "Jan Pecinovsky <jan@energieid.be>",
+    "Max Helskens <max@energieid.be>",
+    "Oscar Swyns <oscar@energieid.be>",
+]
+dependencies.python = "^3.10"
+dependencies.numpy = "^2.0.0"
+dependencies.patsy = "^0.5.6"
+dependencies.statsmodels = "^0.14.2"
+dependencies.pydantic = "^2.8.2"
+dependencies.pandas = "^2.2.2"
+
+[tool.poetry.group.dev.dependencies]
+matplotlib = "^3.9.1"
+jupyter = "^1.0.0"
+ipykernel = "^6.29.5"
+
