--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,3 +60,6 @@ matplotlib = "^3.9.1"
 jupyter = "^1.0.0"
 ipykernel = "^6.29.5"
 seaborn = "^0.13.2"
+pytest = "^8.3.2"
+entsoe-py = "^0.6.8"
+energyid = "^0.0.17"
