--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,15 +6,13 @@ build-backend = "hatchling.build"
 dynamic = ["version"]
 name = "openenergyid"
 authors = [
-    {name = "Jan Pecinovsky", email = "jan@energieid.be"},
-    {name = "Max Helskens", email = "max@energieid.be"},
+    { name = "Jan Pecinovsky", email = "jan@energieid.be" },
+    { name = "Max Helskens", email = "max@energieid.be" },
 ]
-maintainers = [
-    {name = "Jan Pecinovsky", email = "jan@energieid.be"}
-]
+maintainers = [{ name = "Jan Pecinovsky", email = "jan@energieid.be" }]
 description = "Open Source Python library for energy analytics and simulations"
 readme = "README.md"
-license = {file = "LICENSE"}
+license = { file = "LICENSE" }
 keywords = ["energy", "analytics", "simulation"]
 classifiers = [
     "Development Status :: 3 - Alpha",
@@ -40,3 +38,28 @@ path = "openenergyid/__init__.py"
 
 [tool.ruff]
 line-length = 100
+
+[tool.poetry]
+name = "openenergyid"
+version = "0.1.2" # You'll need to set this manually or use a different method for dynamic versioning
+description = "Open Source Python library for energy analytics and simulations"
+authors = [
+    "Jan Pecinovsky <jan@energieid.be>",
+    "Max Helskens <max@energieid.be>",
+    "Oscar Swyns <oscar@energieid.be>",
+]
+dependencies.python = "^3.10"
+dependencies.numpy = "^2.0.0"
+dependencies.patsy = "^0.5.6"
+dependencies.statsmodels = "^0.14.2"
+dependencies.pydantic = "^2.8.2"
+dependencies.pandas = "^2.2.2"
+
+[tool.poetry.group.dev.dependencies]
+matplotlib = "^3.9.1"
+jupyter = "^1.0.0"
+ipykernel = "^6.29.5"
+seaborn = "^0.13.2"
+pytest = "^8.3.2"
+entsoe-py = "^0.6.8"
+energyid = "^0.0.17"
