--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,14 @@
-pandas
-statsmodels
-pydantic
+annotated-types==0.7.0 
+numpy==2.0.0 
+packaging==24.1 
+pandas==2.2.2 
+patsy==0.5.6 
+pydantic-core==2.20.1 
+pydantic==2.8.2 
+python-dateutil==2.9.0.post0 
+pytz==2024.1 
+scipy==1.14.0 
+six==1.16.0 
+statsmodels==0.14.2 
+typing-extensions==4.12.2 
+tzdata==2024.1 
