--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,7 @@ authors = [
     "Oscar Swyns <oscar@energieid.be>",
 ]
 dependencies.python = "^3.10"
+dependencies.pandera = "^0.20.3"
 dependencies.numpy = "^2.0.0"
 dependencies.patsy = "^0.5.6"
 dependencies.statsmodels = "^0.14.2"
@@ -63,3 +64,4 @@ seaborn = "^0.13.2"
 pytest = "^8.3.2"
 entsoe-py = "^0.6.8"
 energyid = "^0.0.17"
+snakeviz = "^2.2.0"
