--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -5,18 +5,18 @@ argon2-cffi==23.1.0
 arrow==1.3.0 
 asttokens==2.4.1 
 async-lru==2.0.4 
-attrs==23.2.0 
-babel==2.15.0 
+attrs==24.2.0 
+babel==2.16.0 
 beautifulsoup4==4.12.3 
 bleach==6.1.0 
 certifi==2024.7.4 
-cffi==1.16.0 
+cffi==1.17.0 
 charset-normalizer==3.3.2 
 colorama==0.4.6 
 comm==0.2.2 
 contourpy==1.2.1 
 cycler==0.12.1 
-debugpy==1.8.2 
+debugpy==1.8.5 
 decorator==5.1.1 
 defusedxml==0.7.1 
 energyid==0.0.17 
@@ -57,7 +57,7 @@ jupyterlab==4.2.4
 kiwisolver==1.4.5 
 markupsafe==2.1.5 
 matplotlib-inline==0.1.7 
-matplotlib==3.9.1 
+matplotlib==3.9.2 
 mistune==3.0.2 
 nbclient==0.10.0 
 nbconvert==7.16.4 
@@ -65,7 +65,7 @@ nbformat==5.10.4
 nest-asyncio==1.6.0 
 notebook-shim==0.2.4 
 notebook==7.2.1 
-numpy==2.0.0 
+numpy==2.0.1 
 overrides==7.7.0 
 packaging==24.1 
 pandas==2.2.2 
@@ -79,7 +79,7 @@ prometheus-client==0.20.0
 prompt-toolkit==3.0.47 
 psutil==6.0.0 
 ptyprocess==0.7.0 
-pure-eval==0.2.2 
+pure-eval==0.2.3 
 pycparser==2.22 
 pygments==2.18.0 
 pyparsing==3.1.2 
@@ -89,21 +89,22 @@ python-json-logger==2.0.7
 pytz==2024.1 
 pywin32==306 
 pywinpty==2.0.13 
-pyyaml==6.0.1 
-pyzmq==26.0.3 
+pyyaml==6.0.2 
+pyzmq==26.1.0 
 qtconsole==5.5.2 
 qtpy==2.4.1 
 referencing==0.35.1 
 requests==2.32.3 
 rfc3339-validator==0.1.4 
 rfc3986-validator==0.1.1 
-rpds-py==0.19.0 
+rpds-py==0.20.0 
 seaborn==0.13.2 
 send2trash==1.8.3 
-setuptools==71.0.3 
+setuptools==72.2.0 
 six==1.16.0 
+snakeviz==2.2.0 
 sniffio==1.3.1 
-soupsieve==2.5 
+soupsieve==2.6 
 stack-data==0.6.3 
 terminado==0.18.1 
 tinycss2==1.3.0 
@@ -116,7 +117,7 @@ tzdata==2024.1
 uri-template==1.3.0 
 urllib3==2.2.2 
 wcwidth==0.2.13 
-webcolors==24.6.0 
+webcolors==24.8.0 
 webencodings==0.5.1 
 websocket-client==1.8.0 
 widgetsnbextension==4.0.11 
