--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 annotated-types==0.7.0 
-numpy==2.0.0 
+multimethod==1.10 
+mypy-extensions==1.0.0 
+numpy==2.0.1 
 packaging==24.1 
 pandas==2.2.2 
+pandera==0.20.3 
 patsy==0.5.6 
 pydantic-core==2.20.1 
 pydantic==2.8.2 
