--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,4 +66,7 @@ seaborn = "^0.13.2"
 pytest = "^8.3.2"
 entsoe-py = "^0.6.8"
 energyid = "^0.0.17"
-snakeviz = "^2.2.0"
+hvplot = "^0.10.0"
+pyarrow = "^17.0.0"
+plotly = "^5.23.0"
+plotly-express = "^0.4.1"
