--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,55 +1,39 @@
-// For format details, see https://aka.ms/devcontainer.json. For config options, see the
-// README at: https://github.com/devcontainers/templates/tree/main/src/python
 {
-	"name": "Python 3",
-	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-	"image": "mcr.microsoft.com/devcontainers/python:1-3.12-bullseye",
-	"features": {
-		"ghcr.io/devcontainers/features/python:1": {},
-		"ghcr.io/devcontainers-contrib/features/ruff:1": {},
-		"ghcr.io/devcontainers-contrib/features/pre-commit:2": {}
-	},
-
-	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	// "forwardPorts": [],
-
-	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "pip3 install -r requirements.txt && pip3 install -r requirements-dev.txt",
-
-	// Configure tool-specific properties.
-	// "customizations": {},
-
-	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
-	// "remoteUser": "root",
-
-	"customizations": {
-		"vscode": {
-		  "extensions": [
-			"ms-toolsai.jupyter",
-			"charliermarsh.ruff",
-			"ms-python.pylint",
-			"ms-python.vscode-pylance",
-			"visualstudioexptteam.vscodeintellicode",
-			"esbenp.prettier-vscode",
-			"GitHub.vscode-pull-request-github"
-		  ],
-		  "settings": {
-			"python.pythonPath": "/usr/local/bin/python",
-			"python.testing.pytestArgs": ["--no-cov"],
-			"editor.formatOnPaste": false,
-			"editor.formatOnSave": true,
-			"editor.formatOnType": true,
-			"files.trimTrailingWhitespace": true,
-			"terminal.integrated.profiles.linux": {
-			  "zsh": {
-				"path": "/usr/bin/zsh"
-			  }
-			},
-			"terminal.integrated.defaultProfile.linux": "zsh",
-			"[python]": {
-			  "editor.defaultFormatter": "charliermarsh.ruff"
-			}
-		  }
-		}
-	}
+  "name": "Python 3",
+  "image": "mcr.microsoft.com/devcontainers/python:1.1.9-3.11-bookworm",
+  "features": {},
+  "postCreateCommand": "zsh -l .devcontainer/post-install.sh",
+  // "postStartCommand": "",
+  "remoteUser": "root",
+  "customizations": {
+    "vscode": {
+      "extensions": [
+        "ms-toolsai.jupyter",
+        "charliermarsh.ruff",
+        "ms-python.pylint",
+        "ms-python.vscode-pylance",
+        "visualstudioexptteam.vscodeintellicode",
+        "esbenp.prettier-vscode",
+        "GitHub.vscode-pull-request-github",
+        "mhutchie.git-graph"
+      ],
+      "settings": {
+        "python.pythonPath": "/usr/local/bin/python",
+        "python.testing.pytestArgs": ["--no-cov"],
+        "editor.formatOnPaste": false,
+        "editor.formatOnSave": true,
+        "editor.formatOnType": true,
+        "files.trimTrailingWhitespace": true,
+        "terminal.integrated.profiles.linux": {
+          "zsh": {
+            "path": "/usr/bin/zsh"
+          }
+        },
+        "terminal.integrated.defaultProfile.linux": "zsh",
+        "[python]": {
+          "editor.defaultFormatter": "charliermarsh.ruff"
+        }
+      }
+    }
+  }
 }
