--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,7 @@ authors = [
     "Oscar Swyns <oscar@energieid.be>",
 ]
 dependencies.python = "^3.10"
+dependencies.polars = "^1.9.0"
 dependencies.pandera = "^0.20.3"
 dependencies.numpy = "^2.0.0"
 dependencies.patsy = "^0.5.6"
@@ -57,6 +58,7 @@ dependencies.pydantic = "^2.8.2"
 dependencies.pandas = "^2.2.2"
 
 [tool.poetry.group.dev.dependencies]
+altair = "^5.4.1"
 matplotlib = "^3.9.1"
 jupyter = "^1.0.0"
 ipykernel = "^6.29.5"
@@ -65,3 +67,4 @@ pytest = "^8.3.2"
 entsoe-py = "^0.6.8"
 energyid = "^0.0.17"
 snakeviz = "^2.2.0"
+plotly = "^5.24.1"
