--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,6 +69,8 @@ entsoe-py = "^0.6.8"
 energyid = "^0.0.17"
 snakeviz = "^2.2.0"
 plotly = "^5.24.1"
+vegafusion = {version = ">=1.5.0", extras = ["embed"]}
 
 [tool.poetry.requires-plugins]
 poetry-plugin-export = ">=1.8"
+
