--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,6 +19,7 @@ repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.6.0
     hooks:
+      - id: mixed-line-ending
       - id: check-yaml
       - id: end-of-file-fixer
       - id: trailing-whitespace
