feat: enforce LF line endings in pre-commit configuration

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -20,6 +20,7 @@ repos:
     rev: v4.6.0
     hooks:
       - id: mixed-line-ending
+        args: [--fix=lf] # Force LF line endings
       - id: check-yaml
       - id: end-of-file-fixer
       - id: trailing-whitespace
