feat: add Granularity support for base load calculations, feat: cleaned up base_load demo to be neat and packaged. chore: added some performance testing.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,6 +70,7 @@ energyid = "^0.0.17"
 snakeviz = "^2.2.0"
 plotly = "^5.24.1"
 vegafusion = {version = ">=1.5.0", extras = ["embed"]}
+vl-convert-python = "^1.7.0"
 
 [tool.poetry.requires-plugins]
 poetry-plugin-export = ">=1.8"
