--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ pandas==2.2.3 ; python_version == "3.11" or python_version >= "3.12" and python_
 pandera==0.20.4 ; python_version == "3.11" or python_version >= "3.12" and python_version < "4.0"
 patsy==0.5.6 ; python_version == "3.11" or python_version >= "3.12" and python_version < "4.0"
 polars==1.9.0 ; python_version == "3.11" or python_version >= "3.12" and python_version < "4.0"
+pyarrow==18.1.0 ; python_version == "3.11" or python_version >= "3.12" and python_version < "4.0"
 pydantic-core==2.23.4 ; python_version == "3.11" or python_version >= "3.12" and python_version < "4.0"
 pydantic==2.9.2 ; python_version == "3.11" or python_version >= "3.12" and python_version < "4.0"
 python-dateutil==2.9.0.post0 ; python_version == "3.11" or python_version >= "3.12" and python_version < "4.0"
