--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,6 +16,7 @@ repos:
     hooks:
       - id: pyupgrade
         args: [--py311-plus]
+
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.6.0
     hooks:
@@ -25,3 +26,18 @@ repos:
       - id: end-of-file-fixer
       - id: trailing-whitespace
       - id: check-added-large-files
+
+  - repo: local
+    hooks:
+      - id: poetry-export-prod
+        name: Poetry export production requirements
+        entry: poetry export -f requirements.txt --output requirements.txt --without-hashes
+        language: system
+        pass_filenames: false
+        files: ^(pyproject\.toml|poetry\.lock)$
+      - id: poetry-export-dev
+        name: Poetry export development requirements
+        entry: poetry export -f requirements.txt --output requirements-dev.txt --without-hashes --only dev
+        language: system
+        pass_filenames: false
+        files: ^(pyproject\.toml|poetry\.lock)$
