--- a/pyproject.toml
+++ b/pyproject.toml
@@ -71,7 +71,8 @@ snakeviz = "^2.2.0"
 plotly = "^5.24.1"
 vegafusion = {version = ">=1.5.0", extras = ["embed"]}
 vl-convert-python = "^1.7.0"
+pyarrow = "^19.0.0"
+pyinstrument = "^5.0.0"
 
 [tool.poetry.requires-plugins]
 poetry-plugin-export = ">=1.8"
-
