--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,7 +51,7 @@ authors = [
 ]
 dependencies.python = "^3.11"
 dependencies.polars = "^1.9.0"
-dependencies.pandera = "^0.20.3"
+dependencies.pandera = {extras = ["polars"], version = "^0.22.1"}
 dependencies.numpy = "^2.0.0"
 dependencies.patsy = "^0.5.6"
 dependencies.statsmodels = "^0.14.2"
