--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,7 +42,7 @@ line-length = 100
 
 [tool.poetry]
 name = "openenergyid"
-version = "0.1.20" # You'll need to set this manually or use a different method for dynamic versioning
+version = "0.1.21" # You'll need to set this manually or use a different method for dynamic versioning
 description = "Open Source Python library for energy analytics and simulations"
 authors = [
     "Jan Pecinovsky <jan@energieid.be>",
@@ -51,7 +51,7 @@ authors = [
 ]
 dependencies.python = "^3.11"
 dependencies.polars = "^1.9.0"
-dependencies.pandera = "^0.20.3"
+dependencies.pandera = {extras = ["polars"], version = "^0.22.1"}
 dependencies.numpy = "^2.0.0"
 dependencies.patsy = "^0.5.6"
 dependencies.statsmodels = "^0.14.2"
@@ -69,6 +69,10 @@ entsoe-py = "^0.6.8"
 energyid = "^0.0.17"
 snakeviz = "^2.2.0"
 plotly = "^5.24.1"
+vegafusion = {version = ">=1.5.0", extras = ["embed"]}
+vl-convert-python = "^1.7.0"
+pyarrow = "^19.0.0"
+pyinstrument = "^5.0.0"
 
 [tool.poetry.requires-plugins]
 poetry-plugin-export = ">=1.8"
