--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,19 @@
-annotated-types==0.7.0 ; python_version == "3.11" or python_version >= "3.12" and python_version < "4.0"
-multimethod==1.10 ; python_version == "3.11" or python_version >= "3.12" and python_version < "4.0"
-mypy-extensions==1.0.0 ; python_version == "3.11" or python_version >= "3.12" and python_version < "4.0"
-numpy==2.1.2 ; python_version == "3.11" or python_version >= "3.12" and python_version < "4.0"
-packaging==24.1 ; python_version == "3.11" or python_version >= "3.12" and python_version < "4.0"
-pandas==2.2.3 ; python_version == "3.11" or python_version >= "3.12" and python_version < "4.0"
-pandera==0.20.4 ; python_version == "3.11" or python_version >= "3.12" and python_version < "4.0"
-patsy==0.5.6 ; python_version == "3.11" or python_version >= "3.12" and python_version < "4.0"
-polars==1.9.0 ; python_version == "3.11" or python_version >= "3.12" and python_version < "4.0"
-pydantic-core==2.23.4 ; python_version == "3.11" or python_version >= "3.12" and python_version < "4.0"
-pydantic==2.9.2 ; python_version == "3.11" or python_version >= "3.12" and python_version < "4.0"
-python-dateutil==2.9.0.post0 ; python_version == "3.11" or python_version >= "3.12" and python_version < "4.0"
-pytz==2024.2 ; python_version == "3.11" or python_version >= "3.12" and python_version < "4.0"
-scipy==1.14.1 ; python_version == "3.11" or python_version >= "3.12" and python_version < "4.0"
-six==1.16.0 ; python_version == "3.11" or python_version >= "3.12" and python_version < "4.0"
-statsmodels==0.14.4 ; python_version == "3.11" or python_version >= "3.12" and python_version < "4.0"
-typeguard==4.3.0 ; python_version == "3.11" or python_version >= "3.12" and python_version < "4.0"
-typing-extensions==4.12.2 ; python_version == "3.11" or python_version >= "3.12" and python_version < "4.0"
-typing-inspect==0.9.0 ; python_version == "3.11" or python_version >= "3.12" and python_version < "4.0"
-tzdata==2024.2 ; python_version == "3.11" or python_version >= "3.12" and python_version < "4.0"
-wrapt==1.16.0 ; python_version == "3.11" or python_version >= "3.12" and python_version < "4.0"
+annotated-types==0.7.0 ; python_version >= "3.11" and python_version < "4.0"
+mypy-extensions==1.0.0 ; python_version >= "3.11" and python_version < "4.0"
+numpy==2.2.2 ; python_version >= "3.11" and python_version < "4.0"
+packaging==24.2 ; python_version >= "3.11" and python_version < "4.0"
+pandas==2.2.3 ; python_version >= "3.11" and python_version < "4.0"
+pandera[polars]==0.22.1 ; python_version >= "3.11" and python_version < "4.0"
+patsy==0.5.6 ; python_version >= "3.11" and python_version < "4.0"
+polars==1.20.0 ; python_version >= "3.11" and python_version < "4.0"
+pydantic-core==2.27.2 ; python_version >= "3.11" and python_version < "4.0"
+pydantic==2.10.5 ; python_version >= "3.11" and python_version < "4.0"
+python-dateutil==2.9.0.post0 ; python_version >= "3.11" and python_version < "4.0"
+pytz==2024.2 ; python_version >= "3.11" and python_version < "4.0"
+scipy==1.15.1 ; python_version >= "3.11" and python_version < "4.0"
+six==1.17.0 ; python_version >= "3.11" and python_version < "4.0"
+statsmodels==0.14.4 ; python_version >= "3.11" and python_version < "4.0"
+typeguard==4.4.1 ; python_version >= "3.11" and python_version < "4.0"
+typing-extensions==4.12.2 ; python_version >= "3.11" and python_version < "4.0"
+typing-inspect==0.9.0 ; python_version >= "3.11" and python_version < "4.0"
+tzdata==2024.2 ; python_version >= "3.11" and python_version < "4.0"
