--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,8 +50,8 @@ authors = [
     "Oscar Swyns <oscar@energieid.be>",
 ]
 dependencies.python = "^3.11"
-dependencies.polars = "^1.9.0"
 dependencies.pandera = {extras = ["polars"], version = "^0.22.1"}
+dependencies.polars = "^1.9.0"
 dependencies.numpy = "^2.0.0"
 dependencies.patsy = "^0.5.6"
 dependencies.statsmodels = "^0.14.2"
@@ -73,6 +73,7 @@ vegafusion = {version = ">=1.5.0", extras = ["embed"]}
 vl-convert-python = "^1.7.0"
 pyarrow = "^19.0.0"
 pyinstrument = "^5.0.0"
+deptry = "^0.23.0"
 
 [tool.poetry.requires-plugins]
 poetry-plugin-export = ">=1.8"
