--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -1,22 +1,30 @@
-name: Build and Publish Package
+name: Publish Python Package
 
 on:
-  release:
-    types: [published]
+  push:
+    tags:
+      - "v*.*.*" # Triggers on version tags like v0.1.0, v1.2.3, etc.
 
 jobs:
   publish:
     runs-on: ubuntu-latest
     permissions:
       contents: write
+      id-token: write
+
     steps:
       - uses: actions/checkout@v4
-
-      - name: Publish PyPI package
-        uses: cadifyai/poetry-publish@v0.1.0
         with:
-          PYTHON_VERSION: "3.11"
-          POETRY_VERSION: "2.0.1"
-          POETRY_CORE_VERSION: "2.0.1"
-          ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          PUBLISH_REGISTRY_PASSWORD: ${{ secrets.PYPI_TOKEN }}
+          fetch-depth: 0 # This ensures all tags are fetched
+
+      - name: Build and publish to PyPI
+        uses: JRubics/poetry-publish@v2.1
+        with:
+          python_version: "3.11" # Matches your pyproject.toml
+          poetry_version: "2.0.1" # Current stable version
+          pypi_token: ${{ secrets.PYPI_TOKEN }}
+          poetry_install_options: "--without dev --sync" # Don't install dev dependencies
+          plugins: "poetry-plugin-export" # Required by your project
+          # Optional: Test on TestPyPI first
+          # repository_name: "testpypi"
+          # repository_url: "https://test.pypi.org/legacy/"
