--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -21,7 +21,7 @@ jobs:
         uses: JRubics/poetry-publish@v2.1
         with:
           python_version: "3.11" # Matches your pyproject.toml
-          poetry_version: "2.0.1" # Current stable version
+          poetry_version: "==2.0.1" # Current stable version
           pypi_token: ${{ secrets.PYPI_TOKEN }}
           poetry_install_options: "--without dev --sync" # Don't install dev dependencies
           plugins: "poetry-plugin-export" # Required by your project
