--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -6,7 +6,8 @@ on:
       - "v*.*.*" # Triggers on version tags like v0.1.0, v1.2.3, etc.
 
 jobs:
-  publish:
+  pypi:
+    name: Publish to PyPI
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -16,15 +17,6 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0 # This ensures all tags are fetched
-
-      - name: Build and publish to PyPI
-        uses: JRubics/poetry-publish@v2.1
-        with:
-          python_version: "3.11" # Matches your pyproject.toml
-          poetry_version: "==2.0.1" # Current stable version
-          pypi_token: ${{ secrets.PYPI_TOKEN }}
-          poetry_install_options: "--without dev --sync" # Don't install dev dependencies
-          plugins: "poetry-plugin-export" # Required by your project
-          # Optional: Test on TestPyPI first
-          # repository_name: "testpypi"
-          # repository_url: "https://test.pypi.org/legacy/"
+      - uses: astral-sh/setup-uv@v3
+      - run: uv build
+      - run: uv publish --trusted-publishing always
