--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,9 @@ dev = [
     "ipykernel>=6.29.5",
     "jupyter>=1.1.1",
     "matplotlib>=3.10.3",
+    "notebook>=7.4.3",
+    "pandoc>=2.4",
+    "pip>=25.1.1",
     "plotly>=6.1.2",
     "pyarrow>=20.0.0",
     "pyinstrument>=5.0.2",
