--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -248,6 +248,7 @@ pandas==2.2.3
     #   statsmodels
 pandera==0.24.0
     # via openenergyid
+pandoc==2.4
 pandocfilters==1.5.1
     # via nbconvert
 parso==0.8.4
@@ -258,11 +259,16 @@ pexpect==4.9.0 ; sys_platform != 'emscripten' and sys_platform != 'win32'
     # via ipython
 pillow==11.2.1
     # via matplotlib
+pip==25.1.1
 platformdirs==4.3.8
     # via jupyter-core
 plotly==6.1.2
 pluggy==1.6.0
     # via pytest
+plumbum==1.9.0
+    # via pandoc
+ply==3.11
+    # via pandoc
 polars==1.30.0
     # via pandera
 prometheus-client==0.22.1
@@ -312,7 +318,9 @@ pytz==2025.2
     #   entsoe-py
     #   pandas
 pywin32==310 ; platform_python_implementation != 'PyPy' and sys_platform == 'win32'
-    # via jupyter-core
+    # via
+    #   jupyter-core
+    #   plumbum
 pywinpty==2.0.15 ; os_name == 'nt'
     # via
     #   jupyter-server
