Add self-consumption metrics and cost calculations to energy evaluation
- Introduced new constants for self-consumed electricity, costs, and earnings in `const.py`.
- Updated the `evaluate` method in `main.py` to calculate electricity consumed, self-consumed, costs of delivered electricity, earnings from exported electricity, and net costs.
- Added calculations for self-consumption ratios in the evaluation results.
- Removed the obsolete Jupyter notebook `simeval.ipynb`.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -17,8 +17,7 @@
         "visualstudioexptteam.vscodeintellicode",
         "esbenp.prettier-vscode",
         "GitHub.vscode-pull-request-github",
-        "mhutchie.git-graph",
-        "ms-toolsai.jupyter"
+        "mhutchie.git-graph"
       ],
       "settings": {
         "python.pythonPath": "/usr/local/bin/python",
