--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -25,7 +25,6 @@ repos:
       - id: check-yaml
       - id: end-of-file-fixer
       - id: trailing-whitespace
-      - id: check-added-large-files
 
   - repo: https://github.com/astral-sh/uv-pre-commit
     # uv version.
@@ -43,3 +42,9 @@ repos:
           - --output-file=requirements-dev.txt
           - --dev
       - id: uv-lock
+
+  - repo: https://github.com/pre-commit/mirrors-isort
+    rev: v5.10.1
+    hooks:
+      - id: isort
+        args: ["--profile", "black"] # Optional: Use Black-compatible sorting
