--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -20,3 +20,8 @@ jobs:
       - uses: astral-sh/setup-uv@v3
       - run: uv build
       - run: uv publish --trusted-publishing always
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v2
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          generate_release_notes: true
