--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -12,7 +12,7 @@ jobs:
     permissions:
       contents: write
       id-token: write
-    if: github.ref == 'refs/heads/main' # Only run when tag is pushed to main branch
+    if: startsWith(github.ref, 'refs/tags/')
 
     steps:
       - uses: actions/checkout@v4
