--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ dev = [
     "jupyter>=1.1.1",
     "matplotlib>=3.10.3",
     "notebook>=7.4.3",
+    "pandas-stubs>=2.3.3.260113",
     "pandoc>=2.4",
     "pip>=25.1.1",
     "plotly>=6.1.2",
@@ -52,6 +53,7 @@ dev = [
     "pytest>=8.4.0",
     "seaborn>=0.13.2",
     "snakeviz>=2.2.2",
+    "types-pytz>=2025.2.0.20251108",
     "vegafusion>=2.0.2",
     "vl-convert-python>=1.8.0",
 ]
